# Projet_maths

./: CMakeLists.txt  README.md
src/: lois.cpp  lois.hpp  main.cpp  pfc.cpp  pfc.hpp
